# FNIFI

./: .gitmodules  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt
examples/local/: main.cpp
examples/minimal-smb/: main.cpp
examples/smb/: main.cpp
examples/smb-local/: main.cpp
include/fnifi/: Collection.hpp  FNIFI.hpp  File.hpp  utils.hpp
include/fnifi/connection/: ConnectionBuilder.hpp  DirectoryIterator.hpp  IConnection.hpp  Local.hpp  Relative.hpp  SMB.hpp
include/fnifi/expression/: DiskBacked.hpp  Expression.hpp  Kind.hpp  Type.hpp  Variable.hpp
include/fnifi/file/: AFileHelper.hpp  Collection.hpp  File.hpp  IFileHelper.hpp  Info.hpp  InfoType.hpp  Kind.hpp  MetadataType.hpp  Type.hpp
include/fnifi/utils/: SyncDirectory.hpp  TempFile.hpp  utils.hpp
src/: AFileHelper.cpp  Collection.cpp  ConnectionBuilder.cpp  DirectoryIterator.cpp  DiskBacked.cpp  Expression.cpp  FNIFI.cpp  File.cpp  IConnection.cpp  IFileHelper.cpp  Local.cpp  Relative.cpp  SMB-Samba.cpp  SMB-libsmb2.cpp  SMB.cpp  SyncDirectory.cpp  TempFile.cpp  Variable.cpp
uml/: architecture.plantuml
